--- a/app/app.css
+++ b/app/app.css
@@ -5,11 +5,35 @@
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+:root {
+  --text-primary: #333;
+}
+
 html,
 body {
   @apply bg-white dark:bg-gray-950;
-
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
+  }
+}
+
+.glass-container {
+  backdrop-filter: blur(17px) saturate(200%);
+  -webkit-backdrop-filter: blur(17px) saturate(200%);
+  background-color: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  color: var(--text-primary);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --text-primary: #fff;
+  }
+  .glass-container {
+    backdrop-filter: blur(17px) saturate(200%);
+    background-color: rgba(0, 0, 0, 0.62);
+    border: 1px solid rgba(255, 255, 255, 0.125);
   }
 }
