--- a/app/app.css
+++ b/app/app.css
@@ -17,6 +17,11 @@ body {
   }
 }
 
+.font-VT323 {
+  /* need to import from google fonts */
+  font-family: VT323 monospace;
+}
+
 .glass-container {
   backdrop-filter: blur(17px) saturate(200%);
   -webkit-backdrop-filter: blur(17px) saturate(200%);
@@ -26,7 +31,6 @@ body {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 }
-
 @media (prefers-color-scheme: dark) {
   :root {
     --text-primary: #fff;
