--- a/app/app.css
+++ b/app/app.css
@@ -1,12 +1,11 @@
-@import "tailwindcss";
+/* this to override lib styling */
+@import "tailwindcss/preflight.css";
+@import "tailwindcss/theme.css";
+@import "tailwindcss/utilities.css";
 
 @theme {
   --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-:root {
-  --text-primary: #333;
 }
 
 html,
